k8s/static-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web
  namespace: elysian-dev
  labels:
    app.kubernetes.io/name: static-web
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/part-of: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: static-web
      app.kubernetes.io/part-of: front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: static-web
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/part-of: front
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: web-pool
      containers:
        - name: "nginx-web"
          image: gcr.io/groovy-height-275210/nginx-web:latest
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
