k8s/static-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web
  namespace: elysian-dev
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: tcp-80
      port: 80
      targetPort: 80
    - protocol: TCP
      name: tcp-443
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: static-web
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/part-of: front
